<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_tab_1"
            android:checked="true"
            android:icon="@drawable/ic_menu_home_main_24dp"
            android:title="@string/menu_tab_1" />

    <item
            android:id="@+id/menu_tab_2"
            android:icon="@drawable/ic_menu_project_main_24dp"
            android:title="@string/menu_tab_2" />

    <!--中间item的标题设置为空-->
    <item
            android:id="@+id/menu_tab_3"
            android:title="" />

    <item
            android:id="@+id/menu_tab_4"
            android:icon="@drawable/ic_menu_system_main_24dp"
            android:title="@string/menu_tab_4" />

    <item
            android:id="@+id/menu_tab_5"
            android:icon="@drawable/ic_menu_navigation_main_24dp"
            android:title="@string/menu_tab_5" />

</menu>
