<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_260"
                android:background="@drawable/img_city"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

            <com.vension.frame.views.ShapeImageView
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/icon_logo"
                    app:siv_type="1"
                    app:siv_borderWidth="1dp"
                    app:siv_borderColor="@color/color_white"/>

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/qb_px_10"
                    android:fontFamily="@font/gotham"
                    android:text="Where you want to go."
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="-40dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:textColorHint="@color/color_999999"
                        android:focusableInTouchMode="true">

                    <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_person_pin_black_24dp"
                            android:fontFamily="@font/calibri"
                            android:hint="@string/username"
                            android:maxLines="1"
                            android:textSize="@dimen/sp_14"
                            android:textColor="@color/colorAppText"
                            android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_12"
                        android:textColorHint="@color/color_999999"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                    <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                            android:fontFamily="@font/calibri"
                            android:textSize="@dimen/sp_14"
                            android:maxLines="1"
                            android:textColor="@color/colorAppText"
                            android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/qb_px_30"
                android:gravity="center"
                android:fontFamily="@font/calibri"
                android:padding="@dimen/dp_12"
                android:elevation="6dp"
                android:background="@drawable/shape_rect_bg_main_radius_20dp"
                android:text="@string/login"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white" />

        <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/qb_px_30"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_14" />
    </LinearLayout>
</ScrollView>
